--- a/wp-content/themes/american_village/style.css
+++ b/wp-content/themes/american_village/style.css
@@ -1,1 +1,8 @@
-
+@charset "UTF-8";
+/*
+Theme Name: american_village
+Theme URI: https://localhost/american/
+Author: Technext
+Author URI: https://technext.dreamcatcher.jp
+Description: american_villageのホームページ
+*/ 
