--- a/wp-content/themes/american_village/rika.scss
+++ b/wp-content/themes/american_village/rika.scss
@@ -132,65 +132,66 @@ footer {
 }
 
 
-
-// ハンバーガーメニュー
-.hamburger {
-  width: 30px;
-  height: 30px;
-  display: block;
-  cursor: pointer;
-
-  .pate,
-  .pate::before,
-  .pate::after{
-    width: 100%;
-    height: 5px;
+@media screen and (max-width: 767px){
+  // ハンバーガーメニュー
+  .hamburger {
+    width: 30px;
+    height: 30px;
     display: block;
-    background-color: grey;
-    border-radius: 2px;
-    transition: all .5s ease;
-  }
-}
+    cursor: pointer;
 
-.hamburger .pate{
-  position: relative;
-  top: calc(50% - 2px);
-
-  &::before,
-  &::after{
-    position: absolute;
-    content: '';
+    .pate,
+    .pate::before,
+    .pate::after{
+      width: 100%;
+      height: 5px;
+      display: block;
+      background-color: grey;
+      border-radius: 2px;
+      transition: all .5s ease;
+    }
   }
 
-  &::before{
-    top: -9px;
-  }
+  .hamburger .pate{
+    position: relative;
+    top: calc(50% - 2px);
 
-  &::after{
-    top: 9px;
-  }
-}
-
-
-#hamburger{
-display: none;
-
-&:checked{
-  + .hamburger .pate{
-    background-color: transparent;
+    &::before,
+    &::after{
+      position: absolute;
+      content: '';
+    }
 
     &::before{
-      transform: rotate(45deg) translate(5px,5px);
-    } 
+      top: -9px;
+    }
 
     &::after{
-      transform: rotate(-45deg) translate(7px,-8px);
+      top: 9px;
     }
+  }
 
-    ~ .header-right{
-      right: 0;
+
+  #hamburger{
+  display: none;
+
+    &:checked{
+      + .hamburger .pate{
+        background-color: transparent;
+
+        &::before{
+          transform: rotate(45deg) translate(5px,5px);
+        } 
+
+        &::after{
+          transform: rotate(-45deg) translate(7px,-8px);
+        }
+
+        ~ .header-right{
+          right: 0;
+        }
+
+      }    
     }
-
   }    
 }
-}    
