--- a/assets/css/rika.css
+++ b/assets/css/rika.css
@@ -49,6 +49,7 @@ h1 {
 }
 
 #blog .blog-boxes {
+  border: 1px solid black;
   width: 320px;
   margin-bottom: 30px;
 }
@@ -65,6 +66,10 @@ h1 {
   position: relative;
 }
 
+#blog .blog-boxes-p .title {
+  font-size: 16px;
+}
+
 @media screen and (max-width: 767px) {
   #blog .blog-boxes-p {
     padding: 0px 45px;
@@ -75,21 +80,21 @@ h1 {
   padding: 5px 0;
 }
 
-#blog .blog-boxes h2 {
+#blog .blog-boxes .more {
   right: 17px;
   position: absolute;
   font-size: 13px;
-  bottom: 30px;
+  bottom: 15px;
 }
 
 @media screen and (max-width: 767px) {
-  #blog .blog-boxes h2 {
+  #blog .blog-boxes .more {
     font-size: 13px;
     right: 50px;
   }
 }
 
-#blog .blog-boxes h2::after {
+#blog .blog-boxes .more::after {
   content: "";
   display: block;
   width: 20px;
@@ -106,7 +111,7 @@ h1 {
   box-shadow: 0 0px 20px rgba(0, 0, 0, 0.3);
 }
 
-#blog .blog-boxes:hover h2::after {
+#blog .blog-boxes:hover .more::after {
   width: 80px;
 }
 
