--- a/wp-content/themes/american_village/rika.scss
+++ b/wp-content/themes/american_village/rika.scss
@@ -44,6 +44,9 @@ h1{
             display: flex;
             justify-content: space-between;
             margin-bottom: 100px;
+            flex-flow: row-reverse;
+            flex-wrap: wrap-reverse;
+
 
             @media screen and (max-width: 767px){
                 display: block;
@@ -53,7 +56,7 @@ h1{
         }
 
         &-boxes{
-            border: 1px solid black;
+            // border: 1px solid black;
             width: 320px;
             margin-bottom: 30px;
 
