--- a/wp-content/themes/american_village/assets/css/rika.css
+++ b/wp-content/themes/american_village/assets/css/rika.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 body {
+  background-color: white;
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
 }
 
@@ -38,6 +39,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   margin-bottom: 100px;
+  flex-flow: row wrap;
 }
 
 @media screen and (max-width: 767px) {
@@ -65,6 +67,10 @@ h1 {
   position: relative;
 }
 
+#blog .blog-boxes-p .title {
+  font-size: 16px;
+}
+
 @media screen and (max-width: 767px) {
   #blog .blog-boxes-p {
     padding: 0px 45px;
@@ -75,28 +81,28 @@ h1 {
   padding: 5px 0;
 }
 
-#blog .blog-boxes h2 {
+#blog .blog-boxes .more {
   right: 17px;
   position: absolute;
   font-size: 13px;
-  bottom: 30px;
+  bottom: 15px;
 }
 
 @media screen and (max-width: 767px) {
-  #blog .blog-boxes h2 {
+  #blog .blog-boxes .more {
     font-size: 13px;
     right: 50px;
   }
 }
 
-#blog .blog-boxes h2::after {
+#blog .blog-boxes .more::after {
   content: "";
   display: block;
   width: 20px;
   height: 2px;
   background-color: black;
   position: absolute;
-  bottom: -10px;
+  bottom: -5px;
   right: 0px;
   transition: 0.5s;
 }
@@ -106,7 +112,7 @@ h1 {
   box-shadow: 0 0px 20px rgba(0, 0, 0, 0.3);
 }
 
-#blog .blog-boxes:hover h2::after {
+#blog .blog-boxes:hover .more::after {
   width: 80px;
 }
 
@@ -124,59 +130,51 @@ footer {
   }
 }
 
-.hamburger {
-  width: 30px;
-  height: 30px;
-  display: block;
-  cursor: pointer;
-}
-
-.hamburger .pate,
-.hamburger .pate::before,
-.hamburger .pate::after {
-  width: 100%;
-  height: 5px;
-  display: block;
-  background-color: grey;
-  border-radius: 2px;
-  transition: all .5s ease;
-}
-
-.hamburger .pate {
-  position: relative;
-  top: calc(50% - 2px);
-}
-
-.hamburger .pate::before, .hamburger .pate::after {
-  position: absolute;
-  content: '';
-}
-
-.hamburger .pate::before {
-  top: -9px;
-}
-
-.hamburger .pate::after {
-  top: 9px;
-}
-
-#hamburger {
-  display: none;
-}
-
-#hamburger:checked + .hamburger .pate {
-  background-color: transparent;
-}
-
-#hamburger:checked + .hamburger .pate::before {
-  transform: rotate(45deg) translate(5px, 5px);
-}
-
-#hamburger:checked + .hamburger .pate::after {
-  transform: rotate(-45deg) translate(7px, -8px);
-}
-
-#hamburger:checked + .hamburger .pate ~ .header-right {
-  right: 0;
+@media screen and (max-width: 767px) {
+  .hamburger {
+    width: 30px;
+    height: 30px;
+    display: block;
+    cursor: pointer;
+  }
+  .hamburger .pate,
+  .hamburger .pate::before,
+  .hamburger .pate::after {
+    width: 100%;
+    height: 5px;
+    display: block;
+    background-color: grey;
+    border-radius: 2px;
+    transition: all .5s ease;
+  }
+  .hamburger .pate {
+    position: relative;
+    top: calc(50% - 2px);
+  }
+  .hamburger .pate::before, .hamburger .pate::after {
+    position: absolute;
+    content: '';
+  }
+  .hamburger .pate::before {
+    top: -9px;
+  }
+  .hamburger .pate::after {
+    top: 9px;
+  }
+  #hamburger {
+    display: none;
+  }
+  #hamburger:checked + .hamburger .pate {
+    background-color: transparent;
+  }
+  #hamburger:checked + .hamburger .pate::before {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+  #hamburger:checked + .hamburger .pate::after {
+    transform: rotate(-45deg) translate(7px, -8px);
+  }
+  #hamburger:checked + .hamburger .pate ~ .header-right {
+    right: 0;
+  }
 }
 /*# sourceMappingURL=rika.css.map */
