--- a/wp-content/themes/american_village/rika.scss
+++ b/wp-content/themes/american_village/rika.scss
@@ -3,6 +3,136 @@ body{
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
 }
 
+// ハンバーガー
+.header {
+
+  @include sp-screen {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+
+    .hamburger {
+      // position: relative;
+      // z-index: 3;
+      // right: 20px;
+      width: 28px;
+      height: 30px;
+      // margin: 30px auto 10px;
+      margin-right: 10px;
+      margin-left: auto;
+    }
+
+    .hamburger span:after,
+    .hamburger span:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: -9px;
+    }
+
+    .hamburger span:after {
+      top: 9px;
+    }
+
+    .hamburger span {
+      position: relative;
+      display: block;
+      top: 15px;
+    }
+
+    .hamburger span,
+    .hamburger span:after,
+    .hamburger span:before {
+      width: 100%;
+      height: 5px;
+      background-color: red;
+      transition: all 0.5s;
+      /*←アニメーション*/
+      backface-visibility: hidden;
+      border-radius: 2px;
+    }
+
+    .hamburger.on span {
+      background-color: transparent;
+    }
+
+    .hamburger.on span:before {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .hamburger.on span:after {
+      transform: rotate(-45deg) translate(7px, -8px);
+    }
+  }
+
+
+  nav{
+    @include sp-screen{
+      overflow: hidden;
+      width: 100%;
+      height: 555px;
+      position: relative;
+    }
+  }
+
+  ul {
+    display: flex;
+    justify-content: flex-end;
+
+
+    li {
+      @include sp-screen {
+        color: white;
+        font-size: 12px;
+        line-height: 0;
+        padding: 18px 20px;
+      }
+    }
+
+    @include sp-screen {
+      display: block;
+      background-color: #173d7e;
+      width: 28%;
+      text-align: center;
+      padding: 150px 0;
+      position: absolute;
+      right: -222px;
+      // position: fixed;
+      z-index: 2;
+
+      &.hide {
+        z-index: 2;
+        right: 0;
+        // transform: translateX(-300px);
+        /* transform: translateY(-500px); */
+        /* transform: translateZ(500px); */
+        /* transform: translateX(100vw); */
+      }
+
+      // transform: translateX(0);
+      transition: all 1s ease;
+    }
+  }
+
+
+  li {
+    padding: 10px 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 31px;
+    line-height: 63px;
+    color: #000000;
+
+    @include sp-screen {
+      padding: 0;
+    }
+
+  }
+
+}
+
+
 main{
     width: 1152px;
     margin: 0 auto;
@@ -141,66 +271,66 @@ footer {
 }
 
 
-@media screen and (max-width: 767px){
-  // ハンバーガーメニュー
-  .hamburger {
-    width: 30px;
-    height: 30px;
-    display: block;
-    cursor: pointer;
+// @media screen and (max-width: 767px){
+//   // ハンバーガーメニュー
+//   .hamburger {
+//     width: 30px;
+//     height: 30px;
+//     display: block;
+//     cursor: pointer;
 
-    .pate,
-    .pate::before,
-    .pate::after{
-      width: 100%;
-      height: 5px;
-      display: block;
-      background-color: grey;
-      border-radius: 2px;
-      transition: all .5s ease;
-    }
-  }
+//     .pate,
+//     .pate::before,
+//     .pate::after{
+//       width: 100%;
+//       height: 5px;
+//       display: block;
+//       background-color: grey;
+//       border-radius: 2px;
+//       transition: all .5s ease;
+//     }
+//   }
 
-  .hamburger .pate{
-    position: relative;
-    top: calc(50% - 2px);
+//   .hamburger .pate{
+//     position: relative;
+//     top: calc(50% - 2px);
 
-    &::before,
-    &::after{
-      position: absolute;
-      content: '';
-    }
+//     &::before,
+//     &::after{
+//       position: absolute;
+//       content: '';
+//     }
 
-    &::before{
-      top: -9px;
-    }
+//     &::before{
+//       top: -9px;
+//     }
 
-    &::after{
-      top: 9px;
-    }
-  }
+//     &::after{
+//       top: 9px;
+//     }
+//   }
 
 
-  #hamburger{
-  display: none;
+//   #hamburger{
+//   display: none;
 
-    &:checked{
-      + .hamburger .pate{
-        background-color: transparent;
+//     &:checked{
+//       + .hamburger .pate{
+//         background-color: transparent;
 
-        &::before{
-          transform: rotate(45deg) translate(5px,5px);
-        } 
+//         &::before{
+//           transform: rotate(45deg) translate(5px,5px);
+//         } 
 
-        &::after{
-          transform: rotate(-45deg) translate(7px,-8px);
-        }
+//         &::after{
+//           transform: rotate(-45deg) translate(7px,-8px);
+//         }
 
-        ~ .header-right{
-          right: 0;
-        }
+//         ~ .header-right{
+//           right: 0;
+//         }
 
-      }    
-    }
-  }    
-}
+//       }    
+//     }
+//   }    
+// }
