色々触りました

--- a/assets/css/toshi.css
+++ b/assets/css/toshi.css
@@ -1,7 +1,7 @@
 header {
-  height: 120px;
+  height: 260px;
   background-color: white;
-  padding: 20px 20px;
+  padding-top: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,6 +9,18 @@ header {
 
 header input {
   display: none;
+}
+
+header ul {
+  display: flex;
+  list-style: none;
+  position: relative;
+  top: 85px;
+  right: -200px;
+}
+
+header li {
+  margin-right: 20px;
 }
 
 #kv {
@@ -27,15 +39,6 @@ header input {
   position: relative;
 }
 
-.header-right ul {
-  display: flex;
-  list-style: none;
-}
-
-.header-right li {
-  margin-right: 20px;
-}
-
 .kv-container {
   text-align: center;
   position: relative;
@@ -48,9 +51,9 @@ header input {
 .kv-container .kv-text {
   position: absolute;
   height: 100%;
-  width: 100%;
-  top: 235px;
-  left: 325px;
+  width: 50%;
+  top: 40%;
+  left: 50%;
 }
 
 @media screen and (max-width: 767px) {
@@ -58,18 +61,13 @@ header input {
     width: 100%;
   }
   header {
-    height: 0px;
-    overflow: hidden;
     width: 100%;
-  }
-  .header-right {
-    position: fixed;
-    top: 85px;
-    right: -200px;
+    position: absolute;
     transition: right 1s ease;
   }
-  .header-right ul {
+  header ul {
     display: block;
+    background-color: aqua;
   }
   #kv {
     text-align: center;
@@ -86,7 +84,6 @@ header input {
   }
   .kv-container .kv-text {
     position: static;
-    background-color: gray;
     position: absolute;
     width: 70%;
     height: auto;
