--- a/wp-content/themes/american_village/rika.scss
+++ b/wp-content/themes/american_village/rika.scss
@@ -1,5 +1,11 @@
-body{
-  background-color: white;
+// レスポンシブ
+@mixin sp-screen {
+  @media screen and (max-width: 767px) {
+    @content;
+  }
+}
+
+body {
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
 }
 
@@ -11,70 +17,77 @@ body{
     top: 0;
     width: 100%;
     z-index: 2;
+  }
 
     .hamburger {
-      // position: relative;
-      // z-index: 3;
-      // right: 20px;
-      width: 28px;
-      height: 30px;
-      // margin: 30px auto 10px;
-      margin-right: 10px;
-      margin-left: auto;
+      @include sp-screen {
+        position: relative;
+        // z-index: 3;
+        // right: 20px;
+        width: 28px;
+        height: 30px;
+        margin: 30px auto 10px;
+        margin-right: 10px;
+        margin-left: auto;
+      }
     }
 
-    .hamburger span:after,
-    .hamburger span:before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: -9px;
-    }
+    
+      .hamburger span:after,
+      .hamburger span:before {
+        @include sp-screen {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: -9px;
+        }
+      }
 
-    .hamburger span:after {
-      top: 9px;
-    }
+      .hamburger span:after {
+        top: 9px;
+      }
 
-    .hamburger span {
-      position: relative;
-      display: block;
-      top: 15px;
-    }
+      .hamburger span {
+        position: relative;
+        display: block;
+        top: 15px;
+      }
 
-    .hamburger span,
-    .hamburger span:after,
-    .hamburger span:before {
-      width: 100%;
-      height: 5px;
-      background-color: red;
-      transition: all 0.5s;
-      /*←アニメーション*/
-      backface-visibility: hidden;
-      border-radius: 2px;
-    }
+      .hamburger span,
+      .hamburger span:after,
+      .hamburger span:before {
+        width: 100%;
+        height: 5px;
+        background-color: red;
+        transition: all 0.5s;
+        /*←アニメーション*/
+        backface-visibility: hidden;
+        border-radius: 2px;
+      }
 
-    .hamburger.on span {
-      background-color: transparent;
-    }
+      .hamburger.on span {
+        background-color: transparent;
+      }
 
-    .hamburger.on span:before {
-      transform: rotate(45deg) translate(5px, 5px);
-    }
+      .hamburger.on span:before {
+        transform: rotate(45deg) translate(5px, 5px);
+      }
 
-    .hamburger.on span:after {
-      transform: rotate(-45deg) translate(7px, -8px);
+      .hamburger.on span:after {
+        transform: rotate(-45deg) translate(7px, -8px);
+      }
     }
-  }
+  
 
 
-  nav{
-    @include sp-screen{
-      overflow: hidden;
-      width: 100%;
-      height: 555px;
-      position: relative;
-    }
-  }
+  // nav{
+  //   @include sp-screen{
+  //     overflow: hidden;
+  //     width: 100%;
+  //     height: 555px;
+  //     position: relative;
+  //   }
+  // }
 
   ul {
     display: flex;
@@ -104,10 +117,7 @@ body{
       &.hide {
         z-index: 2;
         right: 0;
-        // transform: translateX(-300px);
-        /* transform: translateY(-500px); */
-        /* transform: translateZ(500px); */
-        /* transform: translateX(100vw); */
+
       }
 
       // transform: translateX(0);
@@ -133,129 +143,128 @@ body{
 }
 
 
-main{
-    width: 1152px;
-    margin: 0 auto;
+main {
+  width: 1152px;
+  margin: 0 auto;
 
-    @media screen and (max-width: 767px){
-
-    }
+  @media screen and (max-width: 767px) {}
 }
 
-h1{
-    margin: 80px 0 50px;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 700;
+h1 {
+  margin: 80px 0 50px;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
 
-    @media screen and (max-width: 767px){
-        
-        font-size: 30px;
-        margin: 20px 0 10px;
-        
-    }
+  @media screen and (max-width: 767px) {
+
+    font-size: 30px;
+    margin: 20px 0 10px;
+
+  }
 }
 
-#blog{
-    
-
-    .blog{
-
-        &-container{
-            width: 1024px;
-            margin: 0 auto;
-
-            @media screen and (max-width: 767px){
-                width: 100%;
-                margin: 0 auto;
-            }
-        }
-
-        &-box{
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 100px;
-            // flex-flow: row-reverse;
-            // flex-wrap: wrap-reverse;
-            flex-flow: row wrap;
+#blog {
 
 
-            @media screen and (max-width: 767px){
-                display: block;
-                text-align: center;
-                margin-bottom: 10px;
-            }
-        }
+  .blog {
 
-        &-boxes{
-            // border: 1px solid black;
-            width: 320px;
-            margin-bottom: 30px;
+    &-container {
+      width: 1024px;
+      margin: 0 auto;
 
-            @media screen and (max-width: 767px){
-                width: 100%;
-            }
-
-            
-
-            &-p{
-                padding: 0 15px ;
-                height: 200px;
-                position: relative;
-
-                .title{
-                  font-size: 16px;
-                }
-
-                @media screen and (max-width: 767px){
-                    padding: 0px 45px;
-                }
-                
-                .day{
-                    padding: 5px 0 ;
-                }
-
-                
-            }
-
-            .more{
-                right: 17px;
-                position: absolute;
-                font-size: 13px;
-                bottom: 15px;
-                
-
-                @media screen and (max-width: 767px){
-                    font-size: 13px;
-                    right: 50px;
-                }
-            }
-
-
-             
-            .more::after{
-                content: "";
-                display: block;
-                width: 20px;
-                height: 2px;
-                background-color: black;
-                position: absolute;
-                bottom: -5px;
-                right: 0px;
-                transition: 0.5s;
-            }
-             
-        }
-        &-boxes:hover {
-            top:-3px;
-            box-shadow: 0 0px 20px rgba(0, 0, 0, 0.3);
-
-            .more::after{
-                width: 80px;
-                // right: 20px;
-            }
-        }
+      @media screen and (max-width: 767px) {
+        width: 100%;
+        margin: 0 auto;
+      }
     }
+
+    &-box {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 100px;
+      // flex-flow: row-reverse;
+      // flex-wrap: wrap-reverse;
+      flex-flow: row wrap;
+
+
+      @media screen and (max-width: 767px) {
+        display: block;
+        text-align: center;
+        margin-bottom: 10px;
+      }
+    }
+
+    &-boxes {
+      // border: 1px solid black;
+      width: 320px;
+      margin-bottom: 30px;
+
+      @media screen and (max-width: 767px) {
+        width: 100%;
+      }
+
+
+
+      &-p {
+        padding: 0 15px;
+        height: 200px;
+        position: relative;
+
+        .title {
+          font-size: 16px;
+        }
+
+        @media screen and (max-width: 767px) {
+          padding: 0px 45px;
+        }
+
+        .day {
+          padding: 5px 0;
+        }
+
+
+      }
+
+      .more {
+        right: 17px;
+        position: absolute;
+        font-size: 13px;
+        bottom: 15px;
+
+
+        @media screen and (max-width: 767px) {
+          font-size: 13px;
+          right: 50px;
+        }
+      }
+
+
+
+      .more::after {
+        content: "";
+        display: block;
+        width: 20px;
+        height: 2px;
+        background-color: black;
+        position: absolute;
+        bottom: -5px;
+        right: 0px;
+        transition: 0.5s;
+      }
+
+    }
+
+    &-boxes:hover {
+      top: -3px;
+      box-shadow: 0 0px 20px rgba(0, 0, 0, 0.3);
+
+      .more::after {
+        width: 80px;
+        // right: 20px;
+      }
+    }
+  }
 }
 
 footer {
@@ -265,7 +274,7 @@ footer {
   border: 1.43px solid #000000;
   padding: 25px;
 
-  @media screen and (max-width: 767px){
+  @media screen and (max-width: 767px) {
     font-size: 12px;
   }
 }
