--- a/assets/css/rika.css
+++ b/assets/css/rika.css
@@ -33,24 +33,19 @@ body {
   }
 }
 
-.header .hamburger span:after .hamburger span:after,
-.header .hamburger span:before .hamburger span:after {
+.header .hamburger span:after {
   top: 9px;
 }
 
-.header .hamburger span:after .hamburger span,
-.header .hamburger span:before .hamburger span {
+.header .hamburger span {
   position: relative;
   display: block;
   top: 15px;
 }
 
-.header .hamburger span:after .hamburger span,
-.header .hamburger span:after .hamburger span:after,
-.header .hamburger span:after .hamburger span:before,
-.header .hamburger span:before .hamburger span,
-.header .hamburger span:before .hamburger span:after,
-.header .hamburger span:before .hamburger span:before {
+.header .hamburger span,
+.header .hamburger span:after,
+.header .hamburger span:before {
   width: 100%;
   height: 5px;
   background-color: red;
@@ -60,28 +55,25 @@ body {
   border-radius: 2px;
 }
 
-.header .hamburger span:after .hamburger.on span,
-.header .hamburger span:before .hamburger.on span {
+.header .hamburger.on span {
   background-color: transparent;
 }
 
-.header .hamburger span:after .hamburger.on span:before,
-.header .hamburger span:before .hamburger.on span:before {
+.header .hamburger.on span:before {
   transform: rotate(45deg) translate(5px, 5px);
 }
 
-.header .hamburger span:after .hamburger.on span:after,
-.header .hamburger span:before .hamburger.on span:after {
+.header .hamburger.on span:after {
   transform: rotate(-45deg) translate(7px, -8px);
 }
 
-.header ul {
+ul {
   display: flex;
   justify-content: flex-end;
 }
 
 @media screen and (max-width: 767px) {
-  .header ul li {
+  ul li {
     color: white;
     font-size: 12px;
     line-height: 0;
@@ -90,7 +82,7 @@ body {
 }
 
 @media screen and (max-width: 767px) {
-  .header ul {
+  ul {
     display: block;
     background-color: #173d7e;
     width: 28%;
@@ -101,13 +93,13 @@ body {
     z-index: 2;
     transition: all 1s ease;
   }
-  .header ul.hide {
+  ul.hide {
     z-index: 2;
     right: 0;
   }
 }
 
-.header li {
+li {
   padding: 10px 20px;
   font-style: normal;
   font-weight: 400;
@@ -117,7 +109,7 @@ body {
 }
 
 @media screen and (max-width: 767px) {
-  .header li {
+  li {
     padding: 0;
   }
 }
@@ -155,9 +147,10 @@ h1 {
 
 #blog .blog-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin-bottom: 100px;
   flex-flow: row wrap;
+  gap: 30px;
 }
 
 @media screen and (max-width: 767px) {
@@ -232,6 +225,14 @@ h1 {
 
 #blog .blog-boxes:hover .more::after {
   width: 80px;
+}
+
+.load {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 100px;
+  flex-flow: row wrap;
+  gap: 30px;
 }
 
 footer {
