--- a/wp-content/themes/american_village/toshi.scss
+++ b/wp-content/themes/american_village/toshi.scss
@@ -1,5 +1,5 @@
 header {
-  height: 260px;
+  height: 170px;
   background-color: white;
   padding-top: 20px;
   display: flex;
@@ -14,8 +14,8 @@ header {
     display: flex;
     list-style: none;
     position: relative;
-    top: 85px;
-    right: -200px;
+    top: 10px;
+    right: 5%;
   }
 
   li {
@@ -82,7 +82,7 @@ header {
 
     ul {
       display: block;
-      background-color: aqua;
+      background-color: rgb(255, 255, 255);
     }
   }
 
