--- a/assets/css/rika.css
+++ b/assets/css/rika.css
@@ -48,7 +48,7 @@ body {
 .header .hamburger span:before {
   width: 100%;
   height: 5px;
-  background-color: red;
+  background-color: white;
   transition: all 0.5s;
   /*←アニメーション*/
   backface-visibility: hidden;
@@ -74,7 +74,7 @@ ul {
 
 @media screen and (max-width: 767px) {
   ul li {
-    color: white;
+    color: black;
     font-size: 12px;
     line-height: 0;
     padding: 18px 20px;
@@ -87,7 +87,6 @@ ul {
     background-color: #173d7e;
     width: 28%;
     text-align: center;
-    padding: 150px 0;
     position: absolute;
     right: -222px;
     z-index: 2;
@@ -103,7 +102,7 @@ li {
   padding: 10px 20px;
   font-style: normal;
   font-weight: 400;
-  font-size: 31px;
+  font-size: 20px;
   line-height: 63px;
   color: #000000;
 }
