--- a/wp-content/themes/american_village/rika.scss
+++ b/wp-content/themes/american_village/rika.scss
@@ -58,7 +58,7 @@ body {
   .hamburger span:before {
     width: 100%;
     height: 5px;
-    background-color: red;
+    background-color: white;
     transition: all 0.5s;
     /*←アニメーション*/
     backface-visibility: hidden;
@@ -96,7 +96,7 @@ ul {
 
   li {
     @include sp-screen {
-      color: white;
+      color: black;
       font-size: 12px;
       line-height: 0;
       padding: 18px 20px;
@@ -108,7 +108,7 @@ ul {
     background-color: #173d7e;
     width: 28%;
     text-align: center;
-    padding: 150px 0;
+    // padding: 150px 0;
     position: absolute;
     right: -222px;
     // position: fixed;
@@ -130,7 +130,7 @@ li {
   padding: 10px 20px;
   font-style: normal;
   font-weight: 400;
-  font-size: 31px;
+  font-size: 20px;
   line-height: 63px;
   color: #000000;
 
